2024-02-14  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.0-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha06: Mahomes';git push
	git tag -a 5.2.0-alpha06 -m '';git push --tags

	* S1D appears to work well for most variables. Remaining issues	include: icol_crop_noncompete, icol_urban_*

2024-02-13  Charlie Zender  <zender@uci.edu>

	* S1D implement new has_mec determination algorithm

	* S1D Value must not equal zero or missing value when determining landunit type

	* NCO 5.2.0-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha05: Sandflower';git push
	git tag -a 5.2.0-alpha05 -m 'ncks: s1d dmn rdr, mec, vrt, mss_val';git push --tags

	* S1D initialize all output fields to missing value

2024-02-07  Charlie Zender  <zender@uci.edu>

	* S1D now defines MEC and MRV dimensions correctly

	* Decode has_mec, has_lev* et al. before variable definition block, and within OpenMP variable read/write block

2024-02-06  Charlie Zender  <zender@uci.edu>

	* Progress in dimension identificaion, aka, inverting unrolling

	* Add MEC coordinate to output

	* Struggle to automatically identify dimensions in non-MEC fields!

	* Modify nco_dfl_case_generic_err() to print bad case arguments

	* S1D: Add remaining PFT, landunit enums and string functions

2024-02-01  Charlie Zender  <zender@uci.edu>

	* S1D: Add legions of code to improve MEC column output capabilities, including vertical fields

2024-01-31  Charlie Zender  <zender@uci.edu>

	* S1D: verify that decoding ELM unstructured history file for PFT variable GPP works fine

	* S1D: fix spatial dimension addition in nco_s1d_unpack()

2024-01-30  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.0-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha04: Heritage BBQ';git push
	git tag -a 5.2.0-alpha04 -m 'all: cf lsy mtd; ncclimo/ncremap: dpr cheyenne, spp derecho, upd perlmutter;ncremap: TR revert to --mono*, ncoidw, revamp MWF';git push --tags
