@@ -1,1 +1,1 @@
-5.2.0-alpha05
+5.2.0-alpha06
