@@ -1,8 +1,16 @@
 2024-02-14  Charlie Zender  <zender@uci.edu>
 
+	* NCO 5.2.0-beta01 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.2.0-beta01: Mahomes';git push
+	git tag -a 5.2.0-beta01 -m 'all: cf lsy mtd; ncclimo: tms inp_aut, fix inp_glb, fix djf-mode clm_bnd; ncclimo/ncremap: dpr cheyenne+ALCF mch, spp derecho, upd perlmutter; ncks: --chk_bnd/xtn, S1D works; ncremap: TR --mono*, ncoidw, MWF alg_lst, trfv2';git push --tags
+
+	* S1D add topounit support
+
 	* NCO 5.2.0-alpha06 release procedure:
-	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha06: Mahomes';git push
-	git tag -a 5.2.0-alpha06 -m '';git push --tags
+	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha06: Be My Valentine';git push
+	git tag -a 5.2.0-alpha06 -m 'ncks: S1D works';git push --tags
+
+	* S1D skip unpacking empty variables. Now works on up-to-date ELM IG restarts.
 
 	* S1D appears to work well for most variables. Remaining issues	include: icol_crop_noncompete, icol_urban_*
 
